--- a/our-offers.html
+++ b/our-offers.html
@@ -35,7 +35,7 @@
             <section class="insurances">              
                 <article>
                     <h2>Health insurance</h2>
-                    <img srcset="/image/health-300.jpg 300w, /image/health-400.jpg 400w, /image/health-500.jpg 500w" src="/image/health-500.jpg" alt="Health insurance">
+                    <img srcset="image/health-300.jpg 300w, image/health-400.jpg 400w, image/health-500.jpg 500w" src="image/health-500.jpg" alt="Health insurance">
                     <div>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium libero, 
@@ -55,7 +55,7 @@
                 </article>
                 <article>
                     <h2>Home insurance</h2>
-                    <img srcset="/image/home-300.jpg 300w, /image/home-400.jpg 400w, /image/home-500.jpg 500w" src="/image/home-500.jpg" alt="Home insurance">
+                    <img srcset="image/home-300.jpg 300w, image/home-400.jpg 400w, image/home-500.jpg 500w" src="image/home-500.jpg" alt="Home insurance">
                     <div>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem officia inventore facere, quas accusamus laboriosam vitae doloremque, 
@@ -75,7 +75,7 @@
                 </article>
                 <article>        
                     <h2>Car insurance</h2>
-                    <img srcset="/image/car-300.jpg 300w, /image/car-400.jpg 400w, /image/car-500.jpg 500w" src="/image/car-500.jpg" alt="Car insurance">
+                    <img srcset="image/car-300.jpg 300w, image/car-400.jpg 400w, image/car-500.jpg 500w" src="image/car-500.jpg" alt="Car insurance">
                     <div>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos delectus laboriosam perferendis quisquam, repellat magnam 
@@ -96,7 +96,7 @@
                 </article>
                 <article>
                     <h2>Travel insurance</h2>
-                    <img srcset="/image/travel-300.jpg 300w, /image/travel-400.jpg 400w, /image/travel-500.jpg 500w" src="/image/travel-500.jpg" alt="Travel insurance">
+                    <img srcset="image/travel-300.jpg 300w, image/travel-400.jpg 400w, image/travel-500.jpg 500w" src="image/travel-500.jpg" alt="Travel insurance">
                     <div>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio maxime, vero quaerat soluta tempore 
