--- a/our-offers.html
+++ b/our-offers.html
@@ -121,9 +121,9 @@
             <h2>Social Media</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, veritatis esse? Praesentium non ab totam! Quos laborum eos ipsam nulla.</p>
             <article class="social-media">
-                <a href="https://www.instagram.com/" target="_Blank"><img src="/image/instagram.jpg" alt="Instagram icon" width="40" height="40"></a>
-                <a href="https://twitter.com/" target="_Blank"><img src="/image/twitter.jpg" alt="Twitter icon"width="40" height="40"></a>
-                <a href="https://www.facebook.com/" target="_Blank"><img src="/image/facebook.jpg" alt="facebook icon" width="40" height="40"></a>
+                <a href="https://www.instagram.com/" target="_Blank"><img src="image/instagram.jpg" alt="Instagram icon" width="40" height="40"></a>
+                <a href="https://twitter.com/" target="_Blank"><img src="image/twitter.jpg" alt="Twitter icon"width="40" height="40"></a>
+                <a href="https://www.facebook.com/" target="_Blank"><img src="image/facebook.jpg" alt="facebook icon" width="40" height="40"></a>
             </article>
             <a href="#top"><img class="fab-mobile-only" src="image/expand_less_black_24dp.svg" alt="take me to the top icon" width="60" height="60">
             </a>
